--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,9 @@ android {
         viewBinding true
     }
 
+//    dataBinding{
+//        enabled = true
+//    }
     compileSdkVersion 30
     buildToolsVersion "30.0.2"
 
@@ -42,9 +45,10 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.2.0'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
-//    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
-
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+    // https://mvnrepository.com/artifact/androidx.fragment/fragment
+    implementation group: 'androidx.fragment', name: 'fragment', version: '1.3.0'
 }
