--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,15 @@ dependencies {
 
     // https://mvnrepository.com/artifact/androidx.fragment/fragment
     implementation group: 'androidx.fragment', name: 'fragment', version: '1.3.0'
+    def fragment_version = "1.2.5"
+
+    // Kotlin
+    implementation "androidx.fragment:fragment-ktx:$fragment_version"
+
+    def lifecycle_version = "2.2.0"
+
+    // ViewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    // LiveData
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
 }
