--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".Settings"></activity>
+        <activity android:name=".MainActivity" />
         <activity android:name=".recycle.RecyclerViewActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
