--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,9 +8,9 @@ android {
         viewBinding true
     }
 
-//    dataBinding{
-//        enabled = true
-//    }
+    dataBinding{
+        enabled = true
+    }
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
 
@@ -56,4 +56,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'com.google.code.gson:gson:2.8.5'
+
 }
