--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-
 	package="ge.tsu.android.myapplication">
-	
+
 	<application
 		android:allowBackup="true"
 		android:icon="@mipmap/ic_launcher"
@@ -11,19 +10,23 @@
 		android:supportsRtl="true"
 		android:theme="@style/Theme.MyApplication">
 		<activity
-			android:name=".recycle.Settings"
+			android:name=".Settings"
 			android:parentActivityName=".recycle.RecyclerViewActivity">
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
 				android:value=".recycle.RecyclerViewActivity" />
 		</activity>
-		<activity android:name=".MainActivity" />
+
 		<activity android:name=".recycle.RecyclerViewActivity">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
-				
+				<action android:name="android.intent.action.SEARCH" />
+
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
+			<meta-data
+				android:name="android.app.searchable"
+				android:resource="@xml/searchable" />
 		</activity>
 	</application>
 
