--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,27 +7,27 @@
 		android:icon="@mipmap/ic_launcher"
 		android:label="@string/app_name"
 		android:roundIcon="@mipmap/ic_launcher_round"
-		android:supportsRtl="true"
-		android:theme="@style/Theme.MyApplication">
-		<activity
-			android:name=".Settings"
-			android:parentActivityName=".recycle.RecyclerViewActivity">
-			<meta-data
-				android:name="android.support.PARENT_ACTIVITY"
-				android:value=".recycle.RecyclerViewActivity" />
-		</activity>
+        android:supportsRtl="true"
+        android:theme="@style/Theme.MyApplication">
+        <activity
+            android:name=".Activity.SettingsActivity"
+            android:parentActivityName=".Activity.RecyclerViewActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".Activity.RecyclerViewActivity" />
+        </activity>
 
-		<activity android:name=".recycle.RecyclerViewActivity">
-			<intent-filter>
-				<action android:name="android.intent.action.MAIN" />
-				<action android:name="android.intent.action.SEARCH" />
+        <activity android:name=".Activity.RecyclerViewActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.SEARCH" />
 
-				<category android:name="android.intent.category.LAUNCHER" />
-			</intent-filter>
-			<meta-data
-				android:name="android.app.searchable"
-				android:resource="@xml/searchable" />
-		</activity>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
+        </activity>
 	</application>
 
 </manifest>
