--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,8 +17,7 @@
                 android:value=".Activity.RecyclerViewActivity" />
         </activity>
 
-        <activity android:name=".Activity.RecyclerViewActivity"
-            android:parentActivityName=".Activity.RecyclerViewActivity">
+        <activity android:name=".Activity.RecyclerViewActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="android.intent.action.SEARCH" />
@@ -28,10 +27,6 @@
             <meta-data
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".Activity.RecyclerViewActivity" />
-
         </activity>
 	</application>
 
