--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
                 android:value=".Activity.RecyclerViewActivity" />
         </activity>
 
-        <activity android:name=".Activity.DetilesActivity"
+        <activity android:name=".Activity.DetailsActivity"
             android:parentActivityName=".Activity.RecyclerViewActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
