--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="ge.tsu.android.myapplication">
+    package="ge.tsu.android.myapplication">
 
-	<application
-		android:allowBackup="true"
-		android:icon="@mipmap/ic_launcher"
-		android:label="@string/app_name"
-		android:roundIcon="@mipmap/ic_launcher_round"
+    <application
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
+        <activity android:name=".Activity.EditActivity"/>
         <activity
             android:name=".Activity.SettingsActivity"
             android:parentActivityName=".Activity.RecyclerViewActivity">
@@ -16,8 +17,8 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".Activity.RecyclerViewActivity" />
         </activity>
-
-        <activity android:name=".Activity.DetailsActivity"
+        <activity
+            android:name=".Activity.DetailsActivity"
             android:parentActivityName=".Activity.RecyclerViewActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -30,10 +31,11 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
             <meta-data
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
         </activity>
-	</application>
+    </application>
 
 </manifest>
