--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,4 +10,4 @@ services:
       - 50000:50000
     volumes:
       - ~/jenkins_home/jenkins_home:/var/jenkins_home
-      - /var/run/docker.sock:/var/run/docker.sock
+      - /run/host-services/docker.proxy.sock:/var/run/docker.sock
